<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_crear_editar_promocion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="es.esy.pruebaappluis.cityme.Activities_Fragments.CrearEditarPromocion">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/nombre"
            android:textColor="@color/colorDarkGrey"
            android:textSize="14sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nombre"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="7dp"
            android:paddingBottom="5dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="2dp">

            <EditText
                android:id="@+id/nombrePromocion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:textSize="16sp"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:paddingLeft="7dp"
                android:paddingRight="7dp" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_nombre"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/descripcion"
            android:textColor="@color/colorDarkGrey"
            android:textSize="14sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descripcion"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="7dp"
            android:paddingBottom="5dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="2dp">

            <EditText
                android:id="@+id/descripcionPromocion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:textSize="16sp"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:paddingLeft="7dp"
                android:paddingRight="7dp" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/foto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_descripcion"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/imagen"
            android:textColor="@color/colorDarkGrey"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/border_image"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/foto"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imageButtonView"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <Button
            android:id="@+id/botonOk"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_seleccionar_promociones"
            android:fontFamily="sans-serif-medium"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="OK"
            android:textColor="@color/white"
            android:textSize="12dp" />

        <Button
            android:id="@+id/botonEliminar"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_seleccionar_promociones"
            android:fontFamily="sans-serif-medium"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/eliminar"
            android:textColor="@color/white"
            android:textSize="12dp" />

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
