<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.esy.pruebaappluis.cityme.Activities_Fragments.FragmentPrincipal">


    <RelativeLayout
        android:id="@+id/barRadar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBarRadar"
        android:elevation="6dp"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cardLocalicazion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="10dp">

            <RelativeLayout
                android:id="@+id/localizacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:orientation="vertical"
                android:padding="1dp">

                <ImageButton
                    android:id="@+id/btnFind"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/search"
                    android:tint="@color/colorGrey" />

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextViewOrigen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/btnMyLocation"
                    android:layout_toRightOf="@+id/btnFind"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="Localización de origen"
                    android:imeOptions="actionDone"
                    android:padding="7dp"/>

                <ImageButton
                    android:id="@+id/btnMyLocation"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:adjustViewBounds="true"
                    android:background="@drawable/my_location" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>


        <RelativeLayout
            android:id="@+id/radar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardLocalicazion"
            android:paddingBottom="3dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="12dp"
            android:layout_marginTop="1dp">

            <TextView
                android:id="@+id/textoRadar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="Texto"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <SeekBar
                android:id="@+id/seekBarRadar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="0dp"
                android:layout_below="@id/textoRadar"
                android:layout_centerHorizontal="true"
                android:progress="19"
                android:progressBackgroundTint="@color/white" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radar"
            android:paddingRight="6dp"
            android:layout_marginTop="5dp">

            <CheckBox
                android:id="@+id/checkBoxFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.9"
                android:scaleY="0.9"
                android:text="@string/fecha"
                android:textColor="@color/white"
                android:checked="true"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="11sp"
                android:layout_toLeftOf="@+id/checkBoxDistancia"/>

            <CheckBox
                android:id="@+id/checkBoxDistancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.9"
                android:scaleY="0.9"
                android:text="@string/distancia"
                android:textColor="@color/white"
                android:checked="false"
                android:fontFamily="sans-serif-medium"
                android:textSize="11sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </RelativeLayout>


    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/barRadar"
        android:layout_marginTop="0dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimaryApp"/>

    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/sinDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:fontFamily="sans-serif-medium"
        android:text="@string/no_hay_eventos"
        android:textColor="#757575"
        android:textSize="14sp" />


</FrameLayout>
